--- a/admin/vite-project/src/pages/Add/Add.css
+++ b/admin/vite-project/src/pages/Add/Add.css
@@ -8,3 +8,27 @@
 .add form {
   gap: 20px;
 }
+.add-img-upload img {
+  width: 120px;
+}
+.add-product-name input,
+.add-product-description textarea {
+  padding: 10px;
+}
+.add-category-price {
+  display: flex;
+  gap: 30px;
+}
+.add-category-price select,
+.add-category-price input {
+  max-width: 120px;
+  padding: 10px;
+}
+.add-btn {
+  max-width: 120px;
+  border: none;
+  padding: 10px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
